tests/typing/bad/testfile-nil-1.go
package main
func main() { l := nil }
